media query map

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,15 @@ body,
 #map-canvas 
 { 
   height: 300px; 
+  margin-top: 0; 
+  padding: 0;
+}
+
+@media screen and (max-width: 980px) {
+html,
+body,
+#map-canvas  {
+  height: 300px; 
   margin-top: 15px; 
   padding: 0;
 }
