--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* ---------------------------------------------- /*
+ * Core
+/* ---------------------------------------------- */
 .accueil
 {
   background-color: #F2F2F2;
@@ -109,6 +112,10 @@
   height: 50px;
   background-color: black;
 }
+
+/* ---------------------------------------------- /*
+ * mobile-maps
+/* ---------------------------------------------- */
 
 html,
 body,
